# Lasercake

./: .gitignore  .travis.yml  CHANGELOG.markdown  CMakeLists.txt  DEVELOPER_README  DEVELOPER_README.markdown  INSTALL  INSTALL.markdown  INSTALL.txt  Makefile  README.markdown  bbox_collision_detector.cpp  bbox_collision_detector.hpp  bounds_checked_int.hpp  callgrind-lasercake  callgrind-lasercake.py  cmake_config.hpp  cmake_config.in.cpp  compile  concurrency_utils.hpp  config.hpp  debug_print_deterministically.hpp  deficiencies_of_the_current_water_system  determinacy-debugging  dev-build.py  disorganized_stuff.cpp  fonts.qrc  gdb-lasercake  gdb-lasercake.py  generate-boostbcp-aux.hpp  generate-boostbcp.py  gl_data_abstract.hpp  gl_data_format.hpp  gl_data_preparation.cpp  gl_data_preparation.hpp  gl_qt_usage.cpp  gl_rendering.cpp  gl_rendering.hpp  input_representation.hpp  instrument_code_for_determinacy_checking.py  (+40 more)
attic/: concurrency_utils.hpp  concurrency_utils_tests.cpp  unused_structures.hpp
bundled_libs/: README
cmake/: FindGLEW.cmake  FindGLM.cmake  Toolchain-ArchLinux-mingw-w64-i686.cmake  Toolchain-ArchLinux-mingw-w64-x86_64.cmake  Toolchain-ArchLinux-mingw32.cmake
cxx11/: README.txt  array.hpp  atomic.hpp  cxx11_utils.hpp  function.hpp  hash.hpp  tuple.hpp  unique_ptr.hpp  unordered_map.hpp  unordered_set.hpp
data_structures/: bbox_collision_detector.cpp  bbox_collision_detector.hpp  bbox_collision_detector_iteration.hpp  borrowed_bitset.cpp  borrowed_bitset.hpp  bounds_checked_int.hpp  collection_of_obscured_area_boundaries.cpp  collection_of_obscured_area_boundaries.hpp  deque.hpp  geometry.cpp  geometry.hpp  misc_structures.hpp  moving_bbox_collision_detector.hpp  numbers.hpp  patricia_trie.cpp  patricia_trie.hpp  polygon_collision_detection.cpp  polygon_collision_detection.hpp  sunlight.cpp
moving_bbox_tree_visualizer/: compile  moving_bbox_tree_visualizer.cpp
obscuration_visualizer/: compile  obscuration_visualizer_main.cpp
polygon_tester/: compile  polygon_tester_main.cpp
polygon_visualizer/: compile  polygon_visualizer_main.cpp
polyhedron_visualizer/: polyhedron_visualizer_main.cpp
resources/: ReadMe.rtf  VC_Granger_ch8+.sfd  VC_Gryffindor.sfd  VC_Luna.sfd  VC_Slytherin.sfd  icon-multires.icns  windows.rc
tests/: bbox_collision_detector_tests.cpp  borrowed_bitset_tests.cpp  bounds_checked_int_tests.cpp  concurrency_utils_tests.cpp  misc_utils_tests.cpp  patricia_trie_tests.cpp  patricia_trie_tests.hpp  test_framework.cpp  test_header.hpp  test_main.cpp  test_main.hpp  units_tests.cpp
zbox_tester/: README  compile  sim  zbox_tester_main.cpp
zbox_visualizer/: README.markdown  zbox_visualizer_main.cpp
